# kajota-coach

./: .env.mantle-turing.example  .env.rapid-agent.example  .env.slack.example  .gitignore  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKS.md  HUB_MIGRATION.md  LICENSE  README.md  SECURITY.md  TESTING.md  app.json  babel.config.js  demo.sh  index.js  package-lock.json  package.json  render.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
agent/: .env.casper.example  CASPER.md  DEMO_SCRIPT.md  DEMO_SCRIPT_FINALS.md  Dockerfile  OKX_SETUP.md  README.md  SUBMISSION.md  SUBMISSION_FINALS.md  SUBMISSION_OKX.md  asp-manifest.json  pyproject.toml
agent/judge/: DEPLOY.md  index.html  server.mjs
agent/kajota_concierge/: agent.py  keeperhub_client.py  mcp_server.py  mesh.py  server.py  slack_app.py  slack_blocks.py  x402_casper.py  x402_ethereum.py
agent/scripts/: deploy_cep18x402.mjs  fund_feepayer.mjs  gas_watchdog.sh  package.json  x402_demo.py
agent/tests/: test_x402_casper.py
demo/: .gitignore  README.md  app-caption.py  beat2_402_challenge.tape  beat3_pay.sh  beat3_settlement.tape  beat4_asp_identity.tape  build_beats.py  build_captions.py  build_receipts.py  captions.srt  stitch.sh  stitch_pip.sh  stitch_receipts.sh  submission-answers.md  vo-script.md
docs/: SUBMISSION.md  architecture.md  hackathon.md
docs/roadmap/: README.md  tier-1-mesh-loop.md  tier-2-invisible-wallet.md  tier-3-reputation.md  tier-4-spike-report.md  tier-4-voice-first.md  tier-5-whatsapp.md  tier-6-intelligence.md  tier-7-multichain.md
docs/slack-hackathon/: SUBMISSION.md  demo-shot-list.md  demo-vo-script.md  slack-app-manifest.yaml
patches/: expo-dev-menu+5.0.23.patch
scripts/: mesh-demo-watch.mjs
skill/: DEMO.md  Dockerfile  README.md  SKILL.md  SUBMISSION-PASTE.md  SUBMISSION.md  agentfacts.json  pyproject.toml  verify-skill.sh
webapp/: index.html
(+46 files in other folders)
